hphp/hack/test/typecheck/array/disallow_dict_with_non_arraykey_keys.php
<?hh // strict

class C {
  const float PI = 3.14;
}

function test(): void {
  $x = dict[C::PI => 1];
}
